Add cms plugins

--- a/translations/sfs_components.en.yaml
+++ b/translations/sfs_components.en.yaml
@@ -6,6 +6,7 @@ sidebar:
         cms:
             title: "CMS"
             pages: "Pages"
+            articles: "Articles"
             menus: "Menus"
             blocks: "Blocks"
             medias: "Medias"
